<resources>
    <string name="app_name">Robii</string>
    <!-- Strings related to login -->
    <string name="prompt_username">Username</string>
    <string name="prompt_forgot_password">Esqueceu sua senha?</string>
    <string name="prompt_haveaccount">Você tem uma conta? Faça login</string>
    <string name="prompt_password">Senha</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Registrar-se</string>
    <string name="welcome">"Bem-vindo!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>

    <string name="ble_not_supported">BLE is not supported</string>
    <string name="label_data">Data:</string>
    <string name="label_device_address">Device address:</string>
    <string name="label_state">State:</string>
    <string name="no_data">No data</string>
    <string name="connected">Connected</string>
    <string name="disconnected">Disconnected</string>
    <string name="title_devices">BLE Device Scan</string>
    <string name="error_bluetooth_not_supported">Bluetooth not supported.</string>

    <string name="unknown_device">Unknown device</string>
    <string name="unknown_characteristic">Unknown characteristic</string>
    <string name="unknown_service">Unknown service</string>

    <string name="text_view_signup">Registrar-se</string>

    <!-- Progress Bar -->
    <string name="progress_percentage">0%</string>
    <string name="progress">Progresso:</string>

    <!-- ScrollView -->
    <string name="SV_itens_number_1">1</string>
    <string name="SV_itens_number_2">2</string>
    <string name="SV_itens_number_3">3</string>
    <string name="SV_itens_number_4">4</string>
    <string name="SV_itens_number_5">5</string>
    <string name="SV_itens_number_6">6</string>
    <string name="SV_itens_number_7">7</string>
    <string name="SV_itens_number_8">8</string>

    <!-- Menu items -->
    <string name="menu_connect">Connect</string>
    <string name="menu_disconnect">Disconnect</string>
    <string name="menu_scan">Scan</string>
    <string name="menu_stop">Stop</string>
    <string name="is_serial">Serial Present:</string>
    <string-array name="roygbiv">
        <item>Red</item>
        <item>Green</item>
        <item>Blue</item>
    </string-array>
    <string name="button">Send</string>
    <string name="red_slide">Red</string>
    <string name="blue_slide">Blue</string>
    <string name="green_slide">Green</string>
    <string name="login">Login</string>
    <string name="contentDescription_login_logo">Logo Robii</string>
    <string name="button_login">Login</string>
    <string name="menu_profile">Profile</string>
    <string name="sequence_phrase">Robii</string>

<string name="menu_home">Home</string>
    <string name="profile_hint_username">Username</string>
    <string name="profile_TXTemail">Email:</string>
    <string name="profile_TXTname">Name:</string>
    <string name="profile_total_progress">Total do seu progresso</string>
    <string name="profile_TXTavatar">Avatar</string>
    <string name="profile_hint_birthdate">-</string>
    <string name="profile_hint_name">-</string>
    <string name="loading_robot">Robô \n executando...</string>
</resources>
