<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.ProfileFragment"
    android:background="@color/background_main">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/circle_design"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:src="@drawable/profile_blue_ellipse"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            tools:ignore="ContentDescription" />

        <ImageView
            android:id="@+id/avatar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_avatar"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toTopOf="@id/edit_username"
            android:layout_marginTop="70dp"
            android:contentDescription="@string/profile_TXTavatar" />

        <LinearLayout
            android:id="@+id/edit_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintTop_toBottomOf="@+id/avatar"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:gravity="center"
            android:layout_marginTop="16dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            >

            <EditText
                android:id="@+id/editText_profile_username"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/profile_hint_username"
                android:textColorHint="@color/gray_500"
                android:text="ASDWASDW"
                android:gravity="center"
                android:fontFamily="@font/montserrat"
                android:background="@android:color/transparent"
                android:textColor="@color/white"
                android:maxLength="20"
                android:layout_marginStart="25dp"
                android:inputType="text" />

            <View
                android:layout_width="15dp"
                android:layout_height="15dp"
                android:background="@drawable/profile_ic_edit"
                android:layout_gravity="center"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/editText_profile_username"
                android:layout_marginStart="12dp"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/user_info"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintTop_toBottomOf="@+id/circle_design"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@id/user_data"
            android:gravity="start"
            android:layout_marginTop="30dp"
            android:layout_marginStart="30dp"
            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/profile_TXTemail"
                android:textColor="@color/base_blue"
                android:fontFamily="@font/montserrat"
                android:textAlignment="center"
                android:layout_marginBottom="15dp"
                android:textSize="20sp"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/profile_TXTname"
                android:textColor="@color/base_blue"
                android:fontFamily="@font/montserrat"
                android:textAlignment="center"
                android:layout_marginBottom="15dp"
                android:textSize="20sp"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Birth date:"
                android:textColor="@color/base_blue"
                android:textAlignment="center"
                android:fontFamily="@font/montserrat"
                android:textSize="20sp"
                />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/user_data"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintTop_toBottomOf="@+id/circle_design"
            app:layout_constraintLeft_toRightOf="@+id/user_info"
            android:layout_marginTop="30dp"
            android:layout_marginLeft="20dp"
            >

            <TextView
                android:id="@+id/textView_profile_email"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/montserrat"
                android:background="@android:color/transparent"
                android:text="design@gmail.com"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:inputType="textEmailAddress"
                android:layout_marginBottom="15dp"
                />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginBottom="15dp">

                <EditText
                    android:id="@+id/editText_profile_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/montserrat"
                    android:background="@android:color/transparent"
                    android:text="design"
                    android:hint="@string/profile_hint_name"
                    android:textColor="@color/white"
                    android:textSize="20sp"
                    android:maxLength="20"
                    />

                <View
                    android:layout_width="15dp"
                    android:layout_height="15dp"
                    android:background="@drawable/profile_ic_edit"
                    android:layout_gravity="center"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    android:layout_marginStart="5dp"
                    android:layout_marginEnd="5dp"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/editText_profile_birthday"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/montserrat"
                    android:background="@android:color/transparent"
                    android:text="03/08/2004"
                    android:hint="@string/profile_hint_birthdate"
                    android:maxLength="10"
                    android:textColor="@color/white"
                    android:textSize="20sp"
                    android:inputType="datetime"
                    />
                <View
                    android:layout_width="15dp"
                    android:layout_height="15dp"
                    android:background="@drawable/profile_ic_edit"
                    android:layout_gravity="center"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    android:layout_marginStart="5dp"
                    android:layout_marginEnd="5dp"
                    />
            </LinearLayout>

        </LinearLayout>


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintTop_toBottomOf="@+id/user_data"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginTop="30dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/profile_total_progress"
                android:textColor="@color/white"
                android:fontFamily="@font/montserrat"
                android:textSize="20sp"
                android:textAlignment="center"/>

            <TextView
                android:id="@+id/textView_profile_progress_bar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="25%"
                android:textSize="15pt"
                android:textAlignment="center"
                android:textColor="@color/white"/>

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>


</FrameLayout>