<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#06091A"
    android:orientation="vertical">

        <ImageView
            android:id="@+id/logo"
            android:layout_width="match_parent"
            android:layout_height="89dp"
            android:src="@drawable/logo_marca_robii_ofc"
            app:layout_constraintBottom_toTopOf="@id/rectangleContainer"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            />


        <ImageView
            android:id="@+id/rectangleContainer"
            android:layout_width="match_parent"
            android:layout_height="580dp"
            android:src="@drawable/rectangle_login"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/LL_Login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintTop_toTopOf="@id/rectangleContainer"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        >

        <TextView
            android:id="@+id/textViewLogin"
            style="@style/Widget.AppCompat.TextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Login"
            android:textColor="#FFFFFF"
            android:textSize="32sp"
            app:fontFamily="@font/montserrat_bold"
            android:layout_marginTop="100dp"
            app:layout_constraintBottom_toTopOf="@id/editText_login_username"
            app:layout_constraintEnd_toEndOf="@id/rectangleContainer"
            app:layout_constraintStart_toStartOf="@id/rectangleContainer"
            app:layout_constraintTop_toTopOf="@id/rectangleContainer" />

    </androidx.appcompat.widget.LinearLayoutCompat>



    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/LL_Credentials"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        app:layout_constraintTop_toBottomOf="@id/LL_Login"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"

        >

        <EditText
            android:id="@+id/editText_login_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:layout_marginLeft="60dp"
            android:layout_marginRight="60dp"
            android:background="@drawable/custom_input"
            android:gravity="center"
            android:hint="@string/prompt_username"
            android:textColorHint="@color/white"
            android:padding="8dp"
            android:textSize="20sp"
            app:fontFamily="@font/montserrat"
            app:layout_constraintBottom_toTopOf="@id/editText_login_password"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/textViewLogin" />


        <EditText
            android:id="@+id/editText_login_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="60dp"
            android:layout_marginRight="60dp"
            android:background="@drawable/custom_input"
            android:gravity="center"
            android:hint="@string/prompt_password"
            android:textColorHint="@color/white"
            android:padding="8dp"
            android:textColor="#FFFFFF"
            android:textSize="20sp"
            app:fontFamily="@font/montserrat"
            app:layout_constraintBottom_toTopOf="@id/textView_login_forgotpassword"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/editText_login_username" />


        <TextView
            android:id="@+id/textView_login_forgotpassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/prompt_forgotpassword"
            android:textColor="@android:color/white"
            android:textSize="20sp"
            app:fontFamily="@font/montserrat"
            android:layout_marginTop="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/editText_login_password" />

    </androidx.appcompat.widget.LinearLayoutCompat>





        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center"
            android:layout_marginTop="60dp"
            app:layout_constraintTop_toBottomOf="@id/LL_Credentials"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            >

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/button_login"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="60dp"
                    android:layout_marginRight="60dp"
                    android:background="@drawable/custom_button_login"
                    android:text="Login"
                    android:textSize="20sp"
                    android:textColor="@color/white"
                    app:fontFamily="@font/montserrat"
                     />

                <TextView
                    android:id="@+id/textView_hyperlink_signup"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/text_view_signup"
                    android:layout_marginTop="20dp"
                    android:textColor="@android:color/white"
                    android:textSize="20sp"
                    app:fontFamily="@font/montserrat"
                     />

        </androidx.appcompat.widget.LinearLayoutCompat>



</androidx.constraintlayout.widget.ConstraintLayout>